--- a/compose.yml
+++ b/compose.yml
@@ -7,9 +7,8 @@ services:
       - /etc/localtime:/etc/localtime:ro
       - /run/dbus:/run/dbus:ro
     env_file: .env
-    ports:
-      - "${SERVICE_PORT}:8123"
     restart: unless-stopped
+    network_mode: host
 
 volumes: 
   homeassistant_config:
